# TESTING

./: .README.md.swp  CMakeLists.txt  Probando.md
funcionesCompartidas/: README.md
funcionesCompartidas/funcionesCompartidas/: API.c  API.h  funcionesNET.c  funcionesNET.h  listaMemoria.c  listaMemoria.h  listaMetadata.c  listaMetadata.h  log.c  log.h
memoria/: CMakeLists.txt
memoria/src/: LogS  conections.c  consola.h  console.c  console.h  logC  main.c  mem  memoria  memoria.c  memoriaConf.config  server.c  server.h  threadPlanificador.c  threadPlanificador.h
memoria/src/extras/: fileSys.config  fileSystem  fileSystem.c  kernel.c
